package edu.entity;

public enum Entity {
    HUMAN,
    NATURE
}
