package edu.text;

public interface TextFunc {
    int count_letters(String obj);
    int count_words(String text);
}
